--- a/scss/pages/Home/Hero.module.scss
+++ b/scss/pages/Home/Hero.module.scss
@@ -31,6 +31,7 @@
       font-weight: 600;
       font-size: 60px;
       line-height: 1em;
+      letter-spacing: -3px;
       // color: #fff;
       // text-shadow: 0 1px 3px rgba(0, 0, 0, 1); // subtle drop shadow.
       color: $color-deep-navy;
