--- a/scss/pages/Home/Page.module.scss
+++ b/scss/pages/Home/Page.module.scss
@@ -13,24 +13,55 @@
   min-height: 100svh;
 }
 
-.homeCollection { 
+.homeCollection {
   display: flex;
   flex-flow: row nowrap;
   gap: 10px;
+  justify-content: space-between;
 
-  overflow-x : scroll;
+  overflow-x: scroll;
 
+
+  // Chrome, Edge, Safari
+  &::-webkit-scrollbar-button {
+    display: none; // hides the little arrows
+    width: 0;
+    height: 0;
+  }
+
+  // Thin style
+  &::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 4px;
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: transparent;
+  }
+
+  // Firefox
+  scrollbar-width: thin;
+  scrollbar-color: #888 transparent;
 }
 
-.Gallery{
+.Gallery {
   display: flex;
   flex-flow: row nowrap;
-  overflow-x : scroll;
+  overflow-x: scroll;
 
   gap: 10px;
   margin-bottom: 10px;
 
-  img{
-    border-radius:  $border-radius;
+  img {
+    border-radius: $border-radius;
   }
 }
