--- a/scss/pages/Home/Hero.module.scss
+++ b/scss/pages/Home/Hero.module.scss
@@ -9,6 +9,7 @@
   color: #ffffff;
   padding: 25px;
   border-radius: 10px;
+  gap: 25px;
 
   .hero2ContainerLeft {
     h1 {
@@ -44,6 +45,82 @@
       color: #ffffff;
     }
 
+
+  }
+
+  @media (max-width: 900px) {
+
+    // flex-flow: column nowrap;
+    .hero2ContainerLeft {
+      h1 {
+        font-size: 3em;
+        letter-spacing: -3px;
+      }
+
+      h3 {
+        font-size: 1.5em;
+        letter-spacing: -1px;
+      }
+
+
+      ul {
+        li {
+          font-size: 1em;
+        }
+      }
+
+    }
+
+    .img {
+      max-width: 200px;
+      max-height: 400px;
+    }
+    
+    .hero2ContainerLeftLinkButton {
+      font-size: 1em;
+    }
+
+  }
+
+  @media (max-width: 640px) {
+
+    // flex-flow: column nowrap;
+    .hero2ContainerLeft {
+      h1 {
+        font-size: 2em;
+        letter-spacing: -2px;
+      }
+
+      h3 {
+        font-size: 1em;
+        letter-spacing: 0px;
+      }
+
+
+      ul {
+        li {
+          font-size: .75em;
+        }
+      }
+          
+    .hero2ContainerLeftLinkButton {
+      font-size: .75em;
+    }
+
+    }
+
+    .img {
+      max-width: 150px;
+      max-height: 300px;
+    }
+  }
+  
+  @media (max-width: 465px) {
+
+    .img {
+      max-width: 100px;
+      max-height: 200px;
+    }
   }
 }
 
