--- a/scss/footer/footer.module.scss
+++ b/scss/footer/footer.module.scss
@@ -59,7 +59,8 @@
           .SocialIcon {
             // #ecdece
             //  https://codepen.io/sosuke/pen/Pjoqqp?utm_source=chatgpt.com
-            filter: invert(96%) sepia(5%) saturate(1509%) hue-rotate(319deg) brightness(101%) contrast(85%);
+            // filter: invert(96%) sepia(5%) saturate(1509%) hue-rotate(319deg) brightness(101%) contrast(85%);
+            filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(286deg) brightness(103%) contrast(103%);
           }
         }
       }
