--- a/scss/pages/Home/Page.module.scss
+++ b/scss/pages/Home/Page.module.scss
@@ -51,6 +51,10 @@
   // Firefox
   scrollbar-width: thin;
   scrollbar-color: #888 transparent;
+
+  .smallDisclaimer{
+    font-size: 8px;
+  }
 }
 
 .Gallery {
